css/styles.css
/* ... */
@media (min-width: 1304px) and (orientation: landscape) {
  .projects-row {
    max-width: 1175px;
  }
  .project-box {
    min-height: 784px;
  }
  .project-team-text,
  .project-title {
    padding-bottom: 1.5rem;
  }
  .profile-img {
    max-width: 19.3rem;
  }
}
@media (min-width: 1332px) and (orientation: landscape) {
  .project-box {
    height: 45.5rem;
    max-height: 45.5rem;
  }
  .skills-container {
    width: 100%;
    margin: 9rem auto 4rem;
  }
  .current-work-container,
  .tools-container {
    margin-top: 9rem;
  }
  .about-container,
  .contact-container,
  .resume-container {
    margin: 13rem 0 0;
  }
  .contact-container {
    width: 100%;
    margin: 13rem 0 6rem;
  }
}
@media (min-width: 1440px) and (orientation: landscape) {
  .developer-text,
  .name,
  .software-text {
    font-size: 3.5rem;
  }
  .hero-info-box {
    margin-top: 14rem;
  }
  .hero-img {
    max-height: 800px;
  }
  .projects-container {
    margin-top: 19rem;
  }
  .projects-row {
    margin-top: 6.5rem;
  }
  .project-box {
    height: 46rem;
    max-height: 46rem;
    max-width: 370px;
  }
  .project-btn-box {
    min-height: 166px;
    max-height: 166px;
  }
  .section-header,
  .section-header-span {
    font-size: 2.2rem;
  }
  .skill-images-container {
    max-width: 58.7rem;
    margin-top: 3rem;
  }
  .skill-container {
    width: 7.6rem;
  }
}
@media (min-width: 1680px) and (orientation: landscape) {
  .nav-link {
    padding: 1.8rem 0;
  }
  .hero-info-box {
    margin-top: 16rem;
  }
  .hero-img {
    max-height: 900px;
  }
  .developer-text,
  .name,
  .software-text {
    font-size: 3.6rem;
  }
  .welcome-text {
    font-size: 1.9rem;
  }
  .projects-container {
    margin-top: 22rem;
  }
  .project-box {
    height: 49rem;
    max-height: 49rem;
  }
  .project-tech-text {
    font-size: 1.1rem;
    line-height: 2rem;
  }
  .project-description {
    font-size: 1.1rem;
    line-height: 1.8rem;
  }
  .section-header,
  .section-header-span {
    font-size: 2.4rem;
  }
  .current-text-box {
    width: 75%;
  }
  .current-work-list-item {
    font-size: 1.1rem;
    line-height: 2rem;
  }
  .about-description-box p:first-of-type {
    font-size: 1.4rem;
    line-height: 2.4rem;
  }
  .about-description-box {
    width: 47%;
    max-width: 48.8rem;
  }
  .about-description-text,
  .contact-text {
    line-height: 2.3rem;
    font-size: 1.1rem;
  }
  .contact-info-container {
    max-width: 39.9rem;
  }
  .contact-links-container {
    position: relative;
    bottom: 1rem;
  }
  .resume-link-container {
    position: relative;
    bottom: 1rem;
  }
}
@media (min-width: 1820px) and (orientation: landscape) {
  .developer-text,
  .name,
  .software-text {
    font-size: 4rem;
    letter-spacing: 2px;
  }
  .hero-info-box {
    margin-top: 16rem;
  }
  .project-box {
    height: 51rem;
    max-height: 51rem;
  }
  .project-tech-text {
    font-size: 1.2rem;
    line-height: 2.3rem;
  }
  .project-description {
    font-size: 1.2rem;
    line-height: 2rem;
    margin-bottom: 2.8rem;
  }
  .project-btn {
    font-size: 1.1rem;
  }
  .current-work-container {
    margin-top: 7rem;
  }
  .date {
    padding: 3rem 0;
    font-size: 1.6rem;
  }
  .current-text-box {
    width: 85%;
    max-width: 38.6rem;
  }
  .current-work-list-item {
    font-size: 1.3rem;
    line-height: 2.2rem;
  }
  .about-description-box,
  .contact-info-container {
    width: 50%;
    max-width: 56.8rem;
  }
  .contact-info-container {
    width: 55%;
    max-width: 56.25rem;
  }
  .about-description-box p:first-of-type {
    font-size: 1.6rem;
    line-height: 2.6rem;
  }
  .about-description-text,
  .contact-text {
    line-height: 2.3rem;
    font-size: 1.3rem;
  }
}
@media (min-width: 2000px) and (orientation: landscape) {
  .hero-img {
    max-height: 950px;
  }
  .developer-text,
  .name,
  .software-text {
    font-size: 4.3rem;
  }
  .nav-link {
    font-size: 1.1rem;
  }
  .hero-info-box {
    margin-top: 18rem;
  }
  .section-header,
  .section-header-span {
    font-size: 2.6rem;
  }
}
@media (max-width: 736px) and (orientation: landscape) and (hover: none) and (pointer: coarse) {
  .nav-link {
    padding: 1rem 0;
  }
  .hero-info-box {
    margin-top: 6.5rem;
  }
  .developer-text,
  .name,
  .software-text {
    font-size: 1.9rem;
  }
  .projects-container {
    max-width: 400px;
    margin: 9.5rem auto 0;
  }
  .hero-img {
    max-height: 469px;
  }
  .profile-img {
    width: 37%;
    max-width: 13.1rem;
  }
}
@media (min-width: 737px) and (max-width: 926px) and (orientation: landscape) and (hover: none) and (pointer: coarse) {
  .hero-img {
    max-height: 700px;
  }
  .hero-info-box {
    margin-top: 9rem;
  }
  .welcome-text {
    font-size: 1.5rem;
  }
  .projects-container {
    max-width: 400px;
    margin: 13.5rem auto 0;
  }
}

